<resources>
    <string name="app_name">MRT3216 - 2019 Scouting Tool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Help</string>
    <string name="menu_slideshow">New Entry</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Browse Current Entrys</string>
    <string name="menu_send">Send Data</string>
    <string name="text_slideshow">NULL</string>


    <string name="team_name_hint">Team Name</string>
    <string name="team_number_hint">Team Number</string>
    <string name="hatches_placed_hint">Hatches Placed</string>
    <string name="cargo_placed_hint">Cargo placed</string>
    <string name="rockets_filled_hint">Rocket(s) filled</string>
    <string name="other_hint">Other</string>
    <string name="notes_hint">Anything else?</string>
    <string name="clear_buttontext">Clear Entrys</string>

    <string name="sandstorm_header">Sandstorm</string>
    <string name="teleop_header">Teleop</string>
    <string name="climbing_header">Climbing</string>
    <string name="strategy_header">Strategy</string>
    <string name="notes_header">Notes</string>

    <array name="level_started_on">
        <item>Level Started On</item>
        <item>Off Platform</item>
        <item>Level 1</item>
        <item>Level 2</item>
    </array>
    <array name="autonomous_camera">
        <item>Autonomous/Camera</item>
        <item>Autonomous</item>
        <item>Camera</item>
        <item>Both</item>
        <item>Unknown</item>
    </array>\
    <array name="levels_climbed">
        <item>Level(s) Climbed</item>
        <item>Not Parked</item>
        <item>Level 1 (Parked)</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </array>
    <array name="strategy">
        <item>Strategy</item>
        <item>Focused On Hatches (Cargo Ship)</item>
        <item>Focused On Hatches (Rocket)</item>
        <item>Focused On Cargo (Cargo Ship)</item>
        <item>Focused On Cargo (Rocket)</item>
        <item>Defense</item>
        <item>Other (Please Specify)</item>
    </array>

    <string name="submit_btext">Submit</string>

</resources>
